<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp">

<LinearLayout
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp">

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:hint ="@string/book_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/book_author"
        android:textSize="20sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/bookPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_pages"
        android:textSize="20sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/lastEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="2017-09-30 10:00:00"
        android:text = "@string/last_entry"
        android:textSize="15dp"/>

</LinearLayout>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_marginTop="100dp">

<Button
    android:id="@+id/buttonViewBook"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/colorPrimary"
    android:textColor = "@color/colorWhite"
    android:icon = "@android:drawable/ic_menu_edit"
    android:text="View" />

<Button
    android:id="@+id/buttonDeleteBook"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/colorAccent"
    android:textColor = "@color/colorWhite"
    android:text="Delete" />

</LinearLayout>

</LinearLayout>
