<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="335dp"
        android:layout_height="596dp"
        android:layout_margin="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageButton
            android:id="@+id/button"
            android:layout_width="187dp"
            android:layout_height="273dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="175dp"
            android:layout_marginRight="175dp" />

        <EditText
            android:id="@id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="203dp"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="23dp"
            android:autofillHints="@string/book_title"
            android:hint="@string/book_title"
            android:textSize="20sp" />

        <EditText
            android:id="@id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_marginStart="203dp"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="51dp"
            android:autofillHints="@string/book_author"
            android:hint="@string/book_author"
            android:textSize="20sp" />

        <EditText
            android:id="@id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_marginStart="203dp"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="50dp"
            android:autofillHints="@string/book_pages"
            android:hint="@string/book_pages"
            android:inputType="number"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="102dp"
            android:layout_marginRight="102dp"
            android:progress="78"
            android:scaleX="3" />


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <TableRow
        android:id="@id/tableRow"
        android:layout_width="379dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706">

        <TextView
            android:id="@id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:text="@string/last_entryEmpty"
            android:textSize="20sp" />

    </TableRow>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="5dip"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

    <TableRow
        android:id="@id/tableRow2"
        android:layout_width="379dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:text="@string/book_quotes"
            android:textSize="20sp" />

    </TableRow>

</android.support.constraint.ConstraintLayout>