<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="393dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-3dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="335dp"
        android:layout_height="600dp"
        android:layout_margin="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <Button
            android:id="@+id/button2"
            android:layout_width="187dp"
            android:layout_height="273dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="175dp"
            android:layout_marginRight="175dp" />

        <TextView
            android:id="@id/viewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="203dp"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="52dp"
            android:autofillHints="@string/book_title"
            android:textSize="20sp" />

        <TextView
            android:id="@id/viewAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewTitle"
            android:layout_marginStart="203dp"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="61dp"
            android:textSize="20sp" />

        <TextView
            android:id="@id/viewPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewAuthor"
            android:layout_marginStart="203dp"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="61dp"
            android:inputType="number"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="101dp"
            android:layout_marginRight="101dp"
            android:progress="78"
            android:scaleX="3" />



    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <TableRow
        android:id="@id/tableRow3"
        android:layout_width="379dp"
        android:layout_height="67dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@id/entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="75dp"
            android:text="@string/book_entries"
            android:textSize="20sp" />

     </TableRow>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="5dip"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <TableRow
        android:id="@id/tableRow4"
        android:layout_width="379dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@id/quotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="39dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="75dp"
            android:text="@string/book_quotes"
            android:textSize="20sp" />

    </TableRow>

   <Button
        android:id="@+id/action_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/edit_book"
        android:textColor="@color/colorWhite"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/entry_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="Add"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/tableRow3"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="@+id/tableRow3"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.424" />

</android.support.constraint.ConstraintLayout>